--- a/theme/snippets/jumplink-variables.js.liquid
+++ b/theme/snippets/jumplink-variables.js.liquid
@@ -52,8 +52,9 @@
   window.translations.cart.general.pre_order = {{ 'cart.general.pre_order' | t | json }};
   window.translations.cart.general.empty = {{ 'cart.general.empty' | t | json }};
   window.translations.cart.general.savings_html = {{ 'cart.general.savings_html' | t: price: '[savings]' | json }};
-  window.translations.cart.general.added = {{ 'cart.general.added' | t: title: '[title]' | json }};
-  window.translations.cart.general.removed = {{ 'cart.general.removed' | t: title: '[title]' | json }};
+  window.translations.cart.general.added = {{ 'cart.general.added' | t | json }};
+  window.translations.cart.general.removed = {{ 'cart.general.removed' | t | json }};
+  window.translations.cart.general.updated = {{ 'cart.general.updated' | t | json }};
   window.translations.cart.general.can_not_add_to_cart = {{ 'cart.general.can_not_add_to_cart' | t | json }};
 
   window.translations.product = {};
