hiude html until binding done

--- a/theme/assets/theme.scss.liquid
+++ b/theme/assets/theme.scss.liquid
@@ -11617,6 +11617,10 @@ product-b2b-list {
 
 }
 
+// hide elements until binding is done
+[rv-d-block], [rv-d-flex] {
+  display: none;
+}
 html, body {
     height: 100%;
 }
