--- a/theme/snippets/jumplink-sidebar-right.liquid
+++ b/theme/snippets/jumplink-sidebar-right.liquid
@@ -1,5 +1,5 @@
 <!-- http://dcdeiv.github.io/simpler-sidebar/ -->
-<div id="right-sidebar" class="right-sidebar">
+<div id="right-sidebar" class="right-sidebar hidden-print">
     <div id="sidebar-wrapper" class="sidebar-wrapper">  
         <div class="list-group">
             {% for link in linklists.main-menu.links %}
