--- a/theme/snippets/jumplink-navbar.liquid
+++ b/theme/snippets/jumplink-navbar.liquid
@@ -1,6 +1,6 @@
 <nav class="navbar fixed-top navbar-toggleable-md navbar-light bg-white border-b border-px-1 border-color-gray-lighter" id="main-navbar">
 
-  <button class="navbar-toggler navbar-toggler-right sidebar-toggler tcon tcon-menu--xcross" type="button" data-toggle="sidebar" data-target="#right-sidebar" aria-controls="right-sidebar" aria-expanded="false" aria-label="Toggle Sidebar">
+  <button class="navbar-toggler navbar-toggler-right sidebar-toggler tcon tcon-menu--xcross hidden-print" type="button" data-toggle="sidebar" data-target="#right-sidebar" aria-controls="right-sidebar" aria-expanded="false" aria-label="Toggle Sidebar">
     <span class="tcon-menu__lines" aria-hidden="true"></span>
     <span class="tcon-visuallyhidden">toggle menu</span>
   </button>
@@ -11,7 +11,7 @@
       <img class="img-fluid" src="{{ 'logo.svg' | asset_url }}" width="300" height="30" alt="STUDIO PEZZETTA">
     </a>
     
-    <div class="w-100">
+    <div class="w-100 hidden-print">
       <ul class="hidden-md-down navbar-nav d-flex justify-content-end">
         {% for link in linklists.main-menu.links %}
           {% assign has_sub_menu = false %}
