Beautified footer and make it better responsive

--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -32,3 +32,12 @@
         }
     }
 }
+
+.bg-black {
+    .btn-outline-secondary {
+        &:hover {
+            background-color: $btn-secondary-bg;
+            color: $black;
+        }
+    }
+}
