--- a/theme/snippets/jumplink-footer.liquid
+++ b/theme/snippets/jumplink-footer.liquid
@@ -2,7 +2,7 @@
   <div class="container">
     <div data-toggle="footer" data-target="#footer-adjustment" class="row">
       <div class="col-xs-12 text-center">
-        <div class="text-uppercase mt-2" id="footer-book">
+        <div class="text-uppercase my-2" id="footer-book">
           Contact us
           {% include 'jumplink-iconset', name: 'arrow', direction: 'top', color: 'white' %}
         </div>
@@ -10,11 +10,11 @@
     </div>
     <div class="row hidden-xs-up" id="footer-adjustment">
 
-      <div class="col-xs-12 col-sm-4 col-md-4 d-flex flex-row mb-2">
+      <div class="col-xs-12 col-lg-4 d-flex flex-lg-row mb-2">
         {% if linklists.footer.links.size > 0 %}
-          <nav class="navbar navbar-toggleable-xs navbar-inverse bg-black footer-navbar d-flex align-items-end">
+          <nav class="navbar navbar-toggleable-xs navbar-inverse bg-black footer-navbar d-flex align-items-xs-center align-items-lg-end w-100">
             <div class="navbar-collapse">
-                <ul class="navbar-nav">
+                <ul class="navbar-nav d-flex justify-content-xs-center justify-content-lg-start">
                   {% for link in linklists.footer.links %}
                     <li class="nav-item">
                       <a class="nav-link" href="{{ link.url }}" title="{{ link.title }}">{{ link.title }}</a>
@@ -26,7 +26,7 @@
         {% endif %}
       </div>
 
-      <div class="col-xs-12 col-sm-4 col-md-4 text-center">
+      <div class="col-xs-12 col-lg-4 text-center">
 
         <p class="my-3">
           <a href="tel:{{shop.phone | remove: ' ' | remove: '.'}}" class="btn btn-outline-secondary">{{shop.phone}}</a>
@@ -50,10 +50,10 @@
 
       </div>
 
-      <div class="col-xs-12 col-sm-4 col-md-4 d-flex flex-row mb-2">
-        <nav class="navbar navbar-toggleable-xs navbar-inverse bg-black footer-navbar d-flex align-items-end">
+      <div class="col-xs-12 col-lg-4 d-flex flex-lg-row mb-2">
+        <nav class="navbar navbar-toggleable-xs navbar-inverse bg-black footer-navbar d-flex align-items-xs-center align-items-lg-end w-100">
           <div class="navbar-collapse">
-            <ul class="navbar-nav d-flex justify-content-end">
+            <ul class="navbar-nav d-flex justify-content-center justify-content-xl-end">
               <li class="nav-item">
                 <a class="nav-link" href="/" title="{{shop.name}}">
                   © 2017 {{shop.name}}
