--- a/theme/templates/blog.dates.liquid
+++ b/theme/templates/blog.dates.liquid
@@ -17,7 +17,7 @@
 
         {% assign articles = blog.articles %}
         {% for article in articles %}
-          <article class="col-xs-12 col-sm-6 col-md-4 my-5">
+          <article class="col-xs-12 col-md-6 col-lg-4 my-5">
             <a href="{{article.url}}" title="{{article.title}}">
               <div class="article mx-3 border-a border-px-1 border-color-black py-5 text-center d-flex">
                 <h2 class="title align-self-center">{{article.title}}</h2>
