--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -16,3 +16,6 @@
 
 $slick-prev-character: ""; // $fa-var-chevron-left; // "←" !default;
 $slick-next-character: "{% include 'iconset', name: 'arrow', direction: 'top', color: 'white' %}"; // "→"
+
+// font-family: 'Kanit', sans-serif;
+@import url('https://fonts.googleapis.com/css?family=Kanit:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i');
