--- a/theme/snippets/jumplink-footer.liquid
+++ b/theme/snippets/jumplink-footer.liquid
@@ -53,7 +53,7 @@
       <div class="col-xs-12 col-lg-4 d-flex flex-lg-row mb-2">
         <nav class="navbar navbar-toggleable-xs navbar-inverse bg-black footer-navbar d-flex align-items-xs-center align-items-lg-end w-100">
           <div class="navbar-collapse">
-            <ul class="navbar-nav d-flex justify-content-center justify-content-xl-end">
+            <ul class="navbar-nav d-flex justify-content-center justify-content-lg-end">
               <li class="nav-item">
                 <a class="nav-link" href="/" title="{{shop.name}}">
                   © 2017 {{shop.name}}
