cleanups, imprint, fixes, and more from todo

--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -6,6 +6,14 @@
     }
 }
 
+.btn-primary {
+    &:focus {
+        color: $white;
+    }
+}
+
+
+
 .group-quantity-actions {
 
     input.form-control {
