--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -5,11 +5,10 @@ html, body {
 body {
     overflow-y: scroll;
 
-    // Disable bootstrap fix just show scollbar
-    // &.modal-open {
-    //     overflow-y: scroll;
-    //     padding-right: 0 !important;
-    // }
+    // overflow-wrap: break-word;
+    // word-wrap: break-word;
+    // word-break: break-word;
+    -webkit-font-smoothing: subpixel-antialiased;
 }
 
 #barba-wrapper, .barba-container {
