--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -19,3 +19,11 @@ $slick-next-character: "{% include 'iconset', name: 'arrow', direction: 'top', c
 
 // font-family: 'Kanit', sans-serif;
 @import url('https://fonts.googleapis.com/css?family=Kanit:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i');
+
+// font-family: 'Fira Sans Condensed', sans-serif;
+@import url('https://fonts.googleapis.com/css?family=Fira+Sans+Condensed:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i');
+
+
+button, input, optgroup, select, textarea {
+    font-family: $font-family-sans-serif;
+}
