--- a/theme/assets/theme.scss.liquid
+++ b/theme/assets/theme.scss.liquid
@@ -11002,6 +11002,9 @@ $tcon-menu-arrow360left-transformation: (
   &.ratio-3-10 {
     padding-top: 30%;
   }
+  &.ratio-10-17 {
+    padding-top: 170%;
+  }
 
   &.ratio-height-fullscreen {
     padding-top: 0;
@@ -11058,6 +11061,9 @@ $tcon-menu-arrow360left-transformation: (
   }
   &.ratio-3-10:before {
     padding-top: 30%;
+  }
+  &.ratio-10-17:before {
+    padding-top: 170%;
   }
 }
 
@@ -11628,11 +11634,10 @@ html, body {
 body {
     overflow-y: scroll;
 
-    // Disable bootstrap fix just show scollbar
-    // &.modal-open {
-    //     overflow-y: scroll;
-    //     padding-right: 0 !important;
-    // }
+    // overflow-wrap: break-word;
+    // word-wrap: break-word;
+    // word-break: break-word;
+    -webkit-font-smoothing: subpixel-antialiased;
 }
 
 #barba-wrapper, .barba-container {
@@ -11660,6 +11665,14 @@ $slick-next-character: "{% include 'iconset', name: 'arrow', direction: 'top', c
 
 // font-family: 'Kanit', sans-serif;
 @import url('https://fonts.googleapis.com/css?family=Kanit:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i');
+
+// font-family: 'Fira Sans Condensed', sans-serif;
+@import url('https://fonts.googleapis.com/css?family=Fira+Sans+Condensed:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i');
+
+
+button, input, optgroup, select, textarea {
+    font-family: $font-family-sans-serif;
+}
 .custom-nav-link {
     text-transform: uppercase;
     padding-right: 1.5em;
@@ -11859,6 +11872,14 @@ b, strong {
         box-shadow: none !important;
     }
 }
+
+.btn-primary {
+    &:focus {
+        color: $white;
+    }
+}
+
+
 
 .group-quantity-actions {
 
@@ -12066,15 +12087,29 @@ b, strong {
     .caption {
         @include transition($transition-fade);
         position: absolute;
-        bottom: 40px;
-        left: 0;
-        right: 0;
         font-size: 1.5rem;
         text-transform: uppercase;
         width: 100%;
         color: $white;
         text-align: center;
         font-weight: 300;
+        &.caption-x-bottom {
+            bottom: 40px;
+            top: inherit;
+        }
+        &.caption-x-center {
+            bottom: 0;
+            top: 0;
+            height: 100%;
+            @extend .d-flex, .flex-column, .justify-content-center;
+
+        }
+        &.caption-y-center {
+            left: 0;
+            right: 0;
+            width: 100%;
+            text-align: center;
+        }
     }
     &:hover {
         background-color: $black;
@@ -12083,6 +12118,7 @@ b, strong {
         }
     }
 }
+/*
 .product-item, .collection-item {
     .image-wrap {
         .caption {
@@ -12095,6 +12131,7 @@ b, strong {
         }
     }
 }
+*/
 .product-price {
     font-weight: bold;
     letter-spacing: 0.1rem;
