--- a/theme/snippets/jumplink-collection-grid-item.liquid
+++ b/theme/snippets/jumplink-collection-grid-item.liquid
@@ -10,7 +10,7 @@
         {% assign title = collection.title | escape %}
       {% endif %}
       <div class="background-box {{ settings.collections_aspect_ratio }}" style="background-image: url({{ image }});" title="{{ title }}"></div>
-      <div class="caption text-nowrap">
+      <div class="caption caption-y-center caption-x-center text-nowrap">
         {{ collection.title }}
       </div>
     </a>
