--- a/theme/templates/page.carousel.liquid
+++ b/theme/templates/page.carousel.liquid
@@ -1,15 +1,17 @@
-<div class="container pt-5 text-center">
+<div class="container pt-5">
   <div class="row">
     <div class="col-xs-12">
       {% include 'jumplink-carousel', carousel_handle: page.handle %}
     </div>
-    <div class="col-xs-12">
-      <h1 class="display-4">{{ page.title }}</h1>
+    <div class="col-xs-12 text-center">
+      <h1 class="page-title mt-0 mb-4">{{ page.title }}</h1>
     </div>
 
-    <div class="col-xs-12 col-md-8 offset-md-2 rte">
-      {{ page.content }}
-    </div>
+    {% unless page.content == blank %}
+        <div class="col-xs-12 col-md-8 offset-md-2 rte">
+        {{ page.content }}
+        </div>
+    {% endunless %}
     
     {% include 'jumplink-register-box' %}
 
