--- a/theme/templates/page.contact.liquid
+++ b/theme/templates/page.contact.liquid
@@ -1,8 +1,16 @@
-<div class="ah-container">
-  <div class="container">
-    <div class="rte py-1">
-      {{ page.content }}
+<div class="container pt-5">
+  <div class="row">
+    <div class="col-xs-12 text-center">
+      <h1 class="page-title mt-0 mb-4">{{ page.title }}</h1>
     </div>
+
+    {% unless page.content == blank %}
+        <div class="col-xs-12 col-md-8 offset-md-2 rte">
+        {{ page.content }}
+        </div>
+    {% endunless %}
+    
     {% include 'jumplink-contact-form', contact_title: page.title %}
+
   </div>
 </div>
