--- a/theme/templates/page.imprint.liquid
+++ b/theme/templates/page.imprint.liquid
@@ -1,19 +1,21 @@
-<div class="container">
-    <div class="row py-1">
-        <div class="col-xs-12">
-            <h1 class="text-center hidden">{{ page.title }}</h1>
-        </div>
-        <div class="col-xs-12 rte">
-            {{ page.content }}
-            
-            <p>
-                <br />   
-                Credits
-                <br />
-                <a href="feinfineart.de">Design by feinfineart</a>
-                <br />
-                <a href="https://www.jumplink.eu/">Design & Development by JumpLink</a>
-            </P>
-        </div>
+<div class="container pt-5">
+  <div class="row">
+  
+    <div class="col-xs-12 text-center">
+      <h1 class="page-title mt-0 mb-4">{{ page.title }}</h1>
     </div>
+
+    {% unless page.content == blank %}
+        <div class="col-xs-12 col-md-8 offset-md-2 rte">
+        {{ page.content }}
+        </div>
+    {% endunless %}
+
+    <div class="col-xs-12 col-md-8 offset-md-2 mt-4">
+        <strong>Credits</strong><br />
+        <a href="https://feinfineart.de">Design by feinfineart</a><br />
+        <a href="https://www.jumplink.eu/">Web Engineering by JumpLink</a>
+    </div>
+
+  </div>
 </div>
