--- a/theme/templates/page.instashop.liquid
+++ b/theme/templates/page.instashop.liquid
@@ -1,11 +1,19 @@
-<div class="container">
-    <h1 class="text-center hidden">{{ page.title }}</h1>
-    {% if page.content %}
-        <div class="rte p-x-1">
-            {{ page.content }}
+<div class="container pt-5">
+  <div class="row">
+
+    <div class="col-xs-12 hidden-xs-up text-center">
+      <h1 class="page-title mt-0 mb-4">{{ page.title }}</h1>
+    </div>
+
+    {% unless page.content == blank %}
+        <div class="col-xs-12 col-md-8 offset-md-2 rte">
+        {{ page.content }}
         </div>
-    {% endif %}
+    {% endunless %}
+
     <div id="foursixty-wrapper">
         <script id="foursixty" src="" data-money-format="<%= amount %>€" data-feed-id="todo"></script>
     </div>
+
+  </div>
 </div>
