--- a/theme/templates/page.liquid
+++ b/theme/templates/page.liquid
@@ -1,10 +1,15 @@
-<div class="container">
+<div class="container pt-5">
   <div class="row">
-    <div class="col-xs-12">
-        <h1 class="">{{ page.title }}</h1>
+
+    <div class="col-xs-12 text-center">
+      <h1 class="page-title mt-0 mb-4">{{ page.title }}</h1>
     </div>
-    <div class="col-xs-12 rte">
-      {{ page.content }}
-    </div>
+
+    {% unless page.content == blank %}
+        <div class="col-xs-12 col-md-8 offset-md-2 rte">
+        {{ page.content }}
+        </div>
+    {% endunless %}
+
   </div>
 </div>
