custom styles for legal texts, fix account history

--- a/theme/assets/theme.scss.liquid
+++ b/theme/assets/theme.scss.liquid
@@ -11959,7 +11959,7 @@ b, strong {
     }
 }
 .form-control {
-    text-transform: uppercase;
+    // text-transform: uppercase;
 }
 
 .custom-select {
@@ -12530,4 +12530,8 @@ $alertify-left-spacer: 16px !default;
         }
     }
 
+}
+
+#itkanzlei_img_copyright, #itkanzlei_img_copyright {
+  display: none;
 }
