--- a/theme/templates/blog.dates.liquid
+++ b/theme/templates/blog.dates.liquid
@@ -38,4 +38,9 @@
 
   {% endpaginate %}
 
+  {% include 'jumplink-register-box' %}
+
+  {% assign instagramId = 'instafeed-' | append: blog.handle %}
+  {% include 'jumplink-instagram-box', id: instagramId %}
+
 </div>
