--- a/theme/templates/list-collections.liquid
+++ b/theme/templates/list-collections.liquid
@@ -10,5 +10,12 @@
     </div>
     {% include 'jumplink-pagination', show_all_active: false %}
   {% endpaginate %}
+
+  <div class="row">
+
+    {% include 'jumplink-register-box' %}
+
+    {% include 'jumplink-instagram-box' %}
+  </div>
   
 </div>
