--- a/theme/templates/page.carousel.liquid
+++ b/theme/templates/page.carousel.liquid
@@ -15,5 +15,8 @@
     
     {% include 'jumplink-register-box' %}
 
+    {% assign instagramId = 'instafeed-' | append: page.handle %}
+    {% include 'jumplink-instagram-box', id: instagramId %}
+
   </div>
 </div>
