--- a/theme/snippets/jumplink-filter.liquid
+++ b/theme/snippets/jumplink-filter.liquid
@@ -1,4 +1,4 @@
 <div class="hidden-md-down filter">
-  {% include 'jumplink-filter-collections', title: 'Brands' %}
+  {% include 'jumplink-filter-collections' %}
   {% include 'jumplink-filter-subcollections' %}
 </div>
