--- a/theme/templates/index.liquid
+++ b/theme/templates/index.liquid
@@ -15,19 +15,7 @@
 
     {% include 'jumplink-register-box' %}
 
-    <p class="col-xs-12 display-4 mb-4 text-center">
-      Instagram
-    </p>
-
-    <div class="col-xs-12 col-md-8 offset-md-2 my-4">
-      <div class="row" id="instafeed"></div>
-    </div>
-
-    <p class="col-xs-12 lead my-4 text-center">
-      <a target="_blank" href="{{ settings.home_instagram_follow_link }}">
-        {{ 'home.instagram.follow' | t }}
-      </a>
-    </p>
+    {% include 'jumplink-instagram-box' %}
 
     {% unless settings.homepage_page == blank or pages[settings.homepage_page].empty? %}
       {% assign page = pages[settings.homepage_page] %}
