Order of Collections with <aa>, <ab>, <ac> a.s.o

--- a/theme/snippets/jumplink-collection-grid-item.liquid
+++ b/theme/snippets/jumplink-collection-grid-item.liquid
@@ -9,9 +9,10 @@
         {% assign image = collection.products.first | img_url: 'grande' %}
         {% assign title = collection.title | escape %}
       {% endif %}
+
       <div class="background-box {{ settings.collections_aspect_ratio }}" style="background-image: url({{ image }});" title="{{ title }}"></div>
       <div class="caption caption-y-center caption-x-center text-nowrap">
-        {{ collection.title }}
+        {{ collection.title | strip_html }}
       </div>
     </a>
   </div>
