--- a/theme/snippets/jumplink-filter-collections.liquid
+++ b/theme/snippets/jumplink-filter-collections.liquid
@@ -5,9 +5,9 @@
     </li>
     {% for collectionItem in collections %}
       {% if collectionItem.handle == collection.handle %}
-        <li class="list-group-item active">{{ collection.title }}</li>
+        <li class="list-group-item active">{{ collection.title | strip_html }}</li>
       {% else %}
-        <a href="{{ collectionItem.url }}" class="list-group-item list-group-item-action">{{ collectionItem.title }}</a>
+        <a href="{{ collectionItem.url }}" class="list-group-item list-group-item-action">{{ collectionItem.title | strip_html }}</a>
       {% endif %}
     {% endfor %}
   </ul>
