--- a/theme/snippets/jumplink-footer.liquid
+++ b/theme/snippets/jumplink-footer.liquid
@@ -39,7 +39,7 @@
         </p>
         
         <p class="my-3">
-          <img class="logo-inverse" src="{{ 'logo-invert.svg' | asset_url }}" width="300" height="30" alt="{{shop.name}}">
+          <img class="logo-inverse" src="{{ 'footer_logo.png' | asset_url }}" width="300" height="30" alt="{{shop.name}}">
         </p>
 
         <p class="my-3">
