--- a/theme/snippets/jumplink-navbar.liquid
+++ b/theme/snippets/jumplink-navbar.liquid
@@ -8,7 +8,7 @@
   <div class="container">
 
     <a class="navbar-brand" href="/">
-      <img class="img-fluid" src="{{ 'logo.svg' | asset_url }}" width="300" height="30" alt="STUDIO PEZZETTA">
+      <img class="img-fluid" src="{{ 'navbar_logo.png' | asset_url }}" width="300" height="30" alt="STUDIO PEZZETTA">
     </a>
     
     <div class="w-100 hidden-print">
