--- a/src/scss/_navbar.scss
+++ b/src/scss/_navbar.scss
@@ -47,6 +47,10 @@
 }
 
 .navbar-brand {
+    img {
+        max-height: 33px;
+        width: auto;
+    }
     @include media-breakpoint-down(xs) {
         // max-width: 200px;
         padding-right: 50px;
