--- a/src/scss/_variables.scss.liquid
+++ b/src/scss/_variables.scss.liquid
@@ -1,12 +1,12 @@
-$font-avantgarde-eot-path: "{{ 'avantgarde-book.eot' | asset_url }}";
-$font-avantgarde-woff-path: "{{ 'avantgarde-book.woff' | asset_url }}";
-$font-avantgarde-ttf-path: "{{ 'avantgarde-book.ttf' | asset_url }}";
-$font-avantgarde-svg-path: "{{ 'avantgarde-book.svg' | asset_url }}";
+$font-gt-walsheim-eot-path: "{{ 'GT-Walsheim-Light.eot' | asset_url }}";
+$font-gt-walsheim-woff-path: "{{ 'GT-Walsheim-Light.woff' | asset_url }}";
+$font-gt-walsheim-ttf-path: "{{ 'GT-Walsheim-Light.ttf' | asset_url }}";
+$font-gt-walsheim-otf-path: "{{ 'GT-Walsheim-Light.otf' | asset_url }}";
 
-$font-avantgarde-bold-eot-path: "{{ 'avantgarde-book-bold.eot' | asset_url }}";
-$font-avantgarde-bold-woff-path: "{{ 'avantgarde-book-bold.woff' | asset_url }}";
-$font-avantgarde-bold-ttf-path: "{{ 'avantgarde-book-bold.ttf' | asset_url }}";
-$font-avantgarde-bold-svg-path: "{{ 'avantgarde-book-bold.svg' | asset_url }}";
+$font-gt-walsheim-bold-eot-path: "{{ 'GT-Walsheim-Bold.eot' | asset_url }}";
+$font-gt-walsheim-bold-woff-path: "{{ 'GT-Walsheim-Bold.woff' | asset_url }}";
+$font-gt-walsheim-bold-ttf-path: "{{ 'GT-Walsheim-Bold.ttf' | asset_url }}";
+$font-gt-walsheim-bold-otf-path: "{{ 'GT-Walsheim-Bold.otf' | asset_url }}";
 
 $iconset-arrow-l-url: '{{ 'arrow-l.svg' | asset_url }}';
 $iconset-arrow-r-url: '{{ 'arrow-r.svg' | asset_url }}';
