--- a/theme/layout/theme.liquid
+++ b/theme/layout/theme.liquid
@@ -9,7 +9,17 @@
   " />
 
   <title>
-  {{ page_title }}{% if current_tags %} &ndash; tagged "{{ current_tags | join: ', ' }}"{% endif %}{% if current_page != 1 %} &ndash; Page {{ current_page }}{% endif %}{% unless page_title contains shop.name %} &ndash; {{ shop.name }}{% endunless %}
+    {% comment %}
+      Use collection.title directly to remove <##> tag from collection title.
+      The strip_html filter seems to not work with page_title object
+      @see https://help.shopify.com/themes/liquid/objects/page-title
+    {% endcomment %}
+    {% unless collection.title == blank %}
+      {{ collection.title | strip_html }}
+    {% else %}
+      {{ page_title }}
+    {% endunless %}
+    {% unless page_title contains shop.name %} &ndash; {{ shop.name | strip_html }}{% endunless %}
   </title>
 
   {% if page_description %}
